# cpp-Test

./: CMakeLists.txt  README.md  logReader.code-workspace  main.cpp
include/: LogTextProcessor.h  Logger.h  MainWindow.h
lib/spdlog/linux/include/spdlog/: spdlog.h
lib/spdlog/linux/lib/pkgconfig/: spdlog.pc
lib/spdlog/msvc2022/lib/cmake/spdlog/: spdlogConfigTargets.cmake
lib/spdlog/msvc2022/lib/pkgconfig/: spdlog.pc
src/: LogTextProcessor.cpp  MainWindow.cpp
